# minion-ai

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.managed-postgres.yml  docker-compose.postgres.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml  pypi-publish.yml
docs/: README.md  hosting.md  multi-agent.md  publishing-the-image.md  publishing-to-pypi.md  quickstart-mac.md  releasing.md  remote-tracing.md
minions/: TODO.md  __init__.py  cli.py  client.py  config.py  costs.py  demo_tools.py  minion.py  models.py  tools.py  trace_db.py  tracing.py
minions/migrations/: env.py
minions/migrations/versions/: 001_initial_schema.py  002_add_api_keys.py  003_project_scoped_models.py  004_tool_call_seq.py  005_add_error_to_runs.py  006_runs_indexes_and_metadata_jsonb.py
minions/server/: app.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  index.css  lib.jsx
ui/src/components/: AddModelModal.jsx  Analytics.jsx  BatchDeleteModal.jsx  FilterPopover.jsx  ProjectSelect.jsx  RunList.jsx  SettingsModal.jsx  TokensPanel.jsx  TraceDetail.jsx
website/: index.html
